@@ -4,6 +4,7 @@ ncmpc 0.16 - not yet released
 * allow multiple queued database updates
 * reactivate incremental playlist changes
 * optimize "add+play song" with addid/playid
+* handle stderr messages from lyrics plugins
 
 
 ncmpc 0.15 - 2009-09-24
